force-app/main/default/objects/sc_ext__Wizard__c/fields/sc_ext__Current_Step__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Current_Step__c</fullName>
    <label>Current Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>