force-app/main/default/objects/sc_ext__Wizard__c/fields/sc_ext__Progress__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Progress__c</fullName>
    <label>Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>